# table2tex

./: README.md  pyproject.toml
table2tex/: __main__.py  configs.py  data.py  global_table.py  helper.py  inner_table.py  io.py  mask.py  model.py  outer_table.py  positioning.py  setting.py  superior.py  table.py  version.py
table2tex/templates/: GlobalEnvironment.txt  TableEnvironment.txt  TabularEnvironment.txt  positioning_table.txt  superior.txt  table_tabular.txt
