[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "CLI tool to turn a spreadsheet file into LaTeX."
license = "MIT"
name = "table2tex"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
Jinja2 = "^3.1.3"
pandas = "^2.2.0"
python = "^3.11"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
